--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ html
       <div class="hero">
         <div>
           <h1>ΕΛΛΗΝΙΚΟ ΠΑΡΑΤΗΡΗΤΗΡΙΟ ΑΡΓΥΡΟΧΡΥΣΟΧΟΪΑΣ ΚΑΙ ΚΟΣΜΗΜΑΤΟΠΟΙΙΑΣ</h1>
-          <p>Ένας χώρος έρευνας για το ελληνικό κόσμημα που χαρτογραφεί το σύστημα πολιτισμού, οικονομίας και τεχνικής εκπαίδευσης στην αργυροχρυσοχοΐα, σε διάλογο με τις διεθνείς και εγχώριες τάσεις.</p>
+          <p>Ένας χώρος έρευνας για το ελληνικό κόσμημα που χαρτογραφεί το σύστημα πολιτισμού, οικονομίας και τεχνικής εκπαίδευσης στην αργυροχρυσοχοΐα,σε διάλογο με τις διεθνείς και εγχώριες τάσεις.</p>
           <a class="cta" href="#about-el" onclick="openTab('about-el')">Μάθετε περισσότερα →</a>
         </div>
         <img src="assets/jewelry1.jpg" alt="Κοσμήματα σε εργαστήριο" />
@@ -68,9 +68,13 @@ html
     <!-- About el -->
     <section id="about-el" class="tab" aria-label="Σχετικά Ελληνικά" style="display:none;">
       <h2>Τι είναι το Παρατηρητήριο</h2>
-      <p>Το Ελληνικό Παρατηρητήριο Αργυροχρυσοχοΐας και Κοσμηματοποιίας (ΕΛΠΑΚ) αποτελεί μια ανεξάρτητη πρωτοβουλία...</p>
-    </section>
+      <p>Το Ελληνικό Παρατηρητήριο Αργυροχρυσοχοΐας και Κοσμηματοποιίας (ΕΛΠΑΚ) αποτελεί μια ανεξάρτητη πρωτοβουλία που χαρτογραφεί τον σύγχρονο κόσμο του ελληνικού κοσμήματος. Παρατηρούμε και καταγράφουμε τάσεις, δομές και προοπτικές της αργυροχρυσοχοΐας - κοσμηματοποιίας από την ιστορική της διαδρομή, το εξαγωγικό αποτύπωμα και τη σχέση της με τον τουρισμό, μέχρι τις αλλαγές στην εκπαίδευση, τις νέες τεχνολογίες και τους τρόπους με τους οποίους τα κοσμήματα σχεδιάζονται, παράγονται και προωθούνται σήμερα.</p>
 
+      <h2>Σκοπός</h2>
+      <p>Σκοπός μας είναι να αναδεικνύουμε όσα ήδη συμβαίνουν στον χώρο και να τα συνδέουμε με τις ευρύτερες διεθνείς εξελίξεις. Συνδυάζοντας την οικονομική οπτική και ανάλυση με την εμπειρία μέσα στο εργαστήριο της αργυροχρυσοχοΐας, προσεγγίζουμε τον κλάδο ως ερευνήτριες ενός ζωντανού αλλά συχνά λιγότερο προβεβλημένου οικοσυστήματος, προσφέροντας τεκμηριωμένη γνώση, ανάλυση και κριτικό βλέμμα σε όσους στηρίζουν και διαμορφώνουν το ελληνικό κόσμημα.</p>
+    
+    </section>
+    
     <!-- Home en -->
     <section id="home-en" class="tab" aria-label="Home English" style="display:none;">
       <div class="hero">
@@ -86,7 +90,10 @@ html
     <!-- About en -->
     <section id="about-en" class="tab" aria-label="About English" style="display:none;">
       <h2>What is the Observatory</h2>
-      <p>The Hellenic Goldsmithing Observatory (HElGO) is an independent initiative...</p>
+      <p>Hellenic Goldsmithing Observatory (HelGO) is an independent initiative that maps the contemporary landscape of Greek jewelry. We observe and document trends, structures, and long‑term dynamics in goldsmithing: from its historical trajectory, export footprint, and relationship with tourism, to shifts in education, the adoption of new technologies, and the evolving ways in which jewelry is designed, produced, and communicated today.</p>
+
+      <h2>Our mission</h2>
+      <p>Our mission is to bring to light what is already unfolding in the field and to place it in the context of broader international dynamics. Combining economic analysis with first-hand experience as practicing goldsmiths, we approach the sector as researchers of a vibrant yet often under‑represented ecosystem, providing evidence‑based insights, structured knowledge, and a critical perspective to those who support and shape Greek jewelry.</p>
     </section>
 
   </main>
