--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@ html
 
       <h2>Σκοπός</h2>
       <p>Σκοπός μας είναι να αναδεικνύουμε όσα ήδη συμβαίνουν στον χώρο και να τα συνδέουμε με τις ευρύτερες διεθνείς εξελίξεις. Συνδυάζοντας την οικονομική οπτική και ανάλυση με την εμπειρία μέσα στο εργαστήριο της αργυροχρυσοχοΐας, προσεγγίζουμε τον κλάδο ως ερευνήτριες ενός ζωντανού αλλά συχνά λιγότερο προβεβλημένου οικοσυστήματος, προσφέροντας τεκμηριωμένη γνώση, ανάλυση και κριτικό βλέμμα σε όσους στηρίζουν και διαμορφώνουν το ελληνικό κόσμημα.</p>
-    
+
+      <h2>Ερευνητική Ομάδα</h2>
+
+      <h3>Ειρήνη Νομικού-Λαζάρου – Ερευνήτρια και Συντονίστρια Έρευνας</h3>
+      <p>Είναι πτυχιούχος Οικονομικής και Περιφερειακής Ανάπτυξης από το Πάντειο Πανεπιστήμιο, με δύο μεταπτυχιακούς τίτλους: στην Οικονομική Θεωρία (Οικονομικό Πανεπιστήμιο Αθηνών) και στην Επιστήμη των Δεδομένων (Αμερικανικό Κολλέγιο Ελλάδος). Fulbright Research Scholar στο Columbia University, USA (National Center for Disaster Preparedness – Climate School, 2024–2025). Σήμερα είναι Υποψήφια Διδάκτορας στο Τμήμα Οικονομικής Επιστήμης του ΟΠΑ, όπου ερευνά τον κλιματικό κίνδυνο και τα καταστροφικά φυσικά φαινόμενα, με έμφαση στις επιπτώσεις τους στον ασφαλιστικό και χρηματοπιστωτικό τομέα. Από το 2022 εργάζεται ως ερευνήτρια στο Ίδρυμα Οικονομικών και Βιομηχανικών Ερευνών (ΙΟΒΕ) σε κλαδικές μελέτες σχετικά με την πράσινη μετάβαση και την επιχειρηματικότητα, την περιβαλλοντική βιωσιμότητα, την περιφερειακή ανάπτυξη, τον κλιματικό κίνδυνο στο χρηματοπιστωτικό σύστημα και τη στεγαστική πολιτική. Απέκτησε πτυχίο αργυροχρυσοχοΐας από τη Δημόσια Επαγγελματική Σχολή Αργυροχρυσοχοΐας στην Αθήνα (2012–2014), μία σχολή με μακρά ιστορία στον χώρο, και έχει πρακτική εμπειρία μέσα από τη συνεργασία της με εργαστήρια κοσμηματοτεχνίας, καθώς και τη συμμετοχή της σε ομαδικές και ατομικές εκθέσεις.</p>
     </section>
     
     <!-- Home en -->
