--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ html
 
   <header>
     <div class="brand" aria-label="Branding">
-      <img src="assets/logo.png" alt="Logo: Hellenic Goldsmithing Observatory" />
+      <img src="Logo.png" alt="Logo: Hellenic Goldsmithing Observatory" />
       <span class="brand-title">Hellenic Goldsmithing Observatory</span>
     </div>
     <div class="lang-switch" aria-label="Language switch">
