--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hellenic Goldsmithing Observatory</title>
+ 
   <style>
     :root { --color-primary: #0b1b2b; --color-green: #2e8b57; }
     * { box-sizing: border-box; }
@@ -28,7 +28,7 @@
 
   <header>
     <div class="brand" aria-label="Branding">
-      <img src="Logo.png" alt="Logo: Hellenic Goldsmithing Observatory" />
+      <img src="HelGo.png" alt="Logo: Hellenic Goldsmithing Observatory" />
       <span class="brand-title">Hellenic Goldsmithing Observatory</span>
     </div>
     <div class="lang-switch" aria-label="Language switch">
