--- a/index.html
+++ b/index.html
@@ -27,15 +27,36 @@
 <body>
 
   <header>
-    <div class="brand" aria-label="Branding">
-      <img src="HelGo.png"/>
-      <span class="brand-title">Hellenic Goldsmithing Observatory</span>
-    </div>
-    <div class="lang-switch" aria-label="Language switch">
-      <button onclick="setLang('el')">GR</button>
-      <button onclick="setLang('en')">EN</button>
-    </div>
-  </header>
+  <div class="brand" aria-label="Branding">
+    <img id="brandLogo" src="HelGo.png" alt="Brand Logo">
+  </div>
+
+  <div class="lang-switch" aria-label="Language switch">
+    <button onclick="setLang('el')">GR</button>
+    <button onclick="setLang('en')">EN</button>
+  </div>
+</header>
+
+<script>
+  function setLang(lang) {
+    // Αλλάζουμε το λογότυπο με βάση τη γλώσσα
+    const logo = document.getElementById('brandLogo');
+    if (lang === 'el') {
+      logo.src = 'ΕΛΠΑΚ.png'; // ή 'ELPAK.png' ανάλογα με το αρχικό όνομα αρχείου
+      // πρόσθεσε εδώ άλλα βήματα (π.χ. αλλαγή γλωσσικού κειμένου)
+    } else {
+      logo.src = 'HelGo.png';
+    }
+    // αποθηκεύουμε τη γλώσσα (π.χ. localStorage) αν το χρειάζεσαι
+    localStorage.setItem('siteLang', lang);
+  }
+
+  // Μη αυτόματη φόρτωση γλώσσας από το παρελθόν
+  (function initLang() {
+    const saved = localStorage.getItem('siteLang') || 'en';
+    setLang(saved);
+  })();
+</script>
 
   <nav class="main-nav" aria-label="Main navigation" id="main-nav">
     <!-- Ελληνικά (από προεπιλογή φαίνονται) -->
@@ -91,7 +112,7 @@
       </div>
 
       <div class="member">
-           <img src="maria.png" alt="Μαρία Γκιόκα">
+           <img src="maria_.png" alt="Μαρία Γκιόκα">
            <div>
            <h3>Μαρία Γκιόκα – Ερευνήτρια Αγοράς Κοσμήματος</h3>
            <p>Είναι πτυχιούχος Οικονομικής Επιστήμης από το Οικονομικό Πανεπιστήμιο Αθηνών και κάτοχος δύο μεταπτυχιακών τίτλων στην Εφαρμοσμένη Οικονομική και Χρηματοοικονομική και στην Οικονομική Θεωρία (ΟΠΑ). Σήμερα είναι Υποψήφια Διδάκτορας στο Τμήμα Οικονομικής Επιστήμης του ΟΠΑ, όπου το ερευνητικό της έργο εστιάζει στη μακροχρόνια σχέση του δημοσίου χρέους επιλεγμένων χωρών με μακροοικονομικές μεταβλητές που επηρεάζουν τη δυναμική του. Έχει εργαστεί ως junior ερευνήτρια στο ΕΛΙΑΜΕΠ (2014–2015), ως διοικητική υπάλληλος στην εταιρεία APOLLO (2015–2017) και ως ερευνήτρια στην Τράπεζα της Ελλάδος (2019–2020). Κατά τη διάρκεια των διδακτορικών της σπουδών έχει διδάξει προπτυχιακά και μεταπτυχιακά μαθήματα, εμπειρία που συνέβαλε καθοριστικά στην ικανότητά της να δομεί και να παρουσιάζει με σαφήνεια σύνθετα θεωρητικά και τεχνικά ζητήματα, καθώς και να αναδεικνύει τις συνδέσεις τους με τις δημιουργικές πρακτικές, την αγορά και τη διαδικασία παραγωγής αξίας. Παράλληλα με την ακαδημαϊκή της πορεία, μεγάλωσε στο Ναύπλιο, σε ένα περιβάλλον άμεσα συνδεδεμένο με το κόσμημα. Από νεαρή ηλικία απέκτησε ουσιαστική εμπειρία μέσα από την πολυετή λειτουργία οικογενειακού καταστήματος κοσμημάτων σε μία από τις πιο έντονες τουριστικά αγορές της Ελλάδας. Η καθημερινή της τριβή με την πώληση, την προώθηση και την επαφή με ένα ευρύ ελληνικό και διεθνές αγοραστικό κοινό της προσέφερε βαθιά γνώση των τάσεων και της εμπορικής δυναμικής του κοσμήματος, καθώς και μια σφαιρική ματιά στη γέφυρα συνεργασίας μεταξύ κοσμηματοτεχνίτη και πωλητή — από τον σχεδιασμό και την παραγωγή έως την παρουσίαση, την αφήγηση και την τελική επιλογή του κοσμήματος από τον αγοραστή.</p>
@@ -140,7 +161,7 @@
      <div>
 
         <div class="member">
-           <img src="maria.png" alt="Maria Gioka">
+           <img src="maria_.png" alt="Maria Gioka">
            <div>
               <h3>Maria Gioka – Researcher, Jewelry Market </h3>
               <p>Maria Gioka holds a degree in Economics from Athens University of Economics and Business (AUEB) and two postgraduate qualifications in Applied Economics and Financial Economics, and in Economic Theory (AUEB). She is currently a PhD candidate in the Department of Economic Science at AUEB, where her research focuses on the long-run relationship between public debt in selected countries and macroeconomic variables that influence its dynamics. Her professional background includes roles as a junior researcher at Hellenic Foundation for European & Foreign Policy (ELIAMEP) (2014–2015), administrative staff at APOLLO (2015–2017), and researcher at the Bank of Greece (2019–2020). During her doctoral studies, her teaching portfolio includes undergraduate and graduate courses. This experience has been instrumental in her ability to structure and clearly present complex theoretical and technical issues, and to highlight their links with creative practices, markets, and the process of value creation. Alongside her academic path, she grew up in Nafplio, in an environment closely connected to jewelry. From a young age, she gained substantive experience through the family jewelry business, in one of Greece’s busiest tourist markets. Her daily engagement with selling, promoting, and engaging with a broad Greek and international audience has given her deep insight into jewelry trends and the commercial dynamics of the industry, as well as a holistic view of the bridge between craftsmanship and commerce — from design and production to presentation, storytelling, and the buyer’s final selection of the piece.</p>
