--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <header>
  <div class="brand" aria-label="Branding">
-    <img id="brandLogo" src="HelGo.png" alt="Brand Logo">
+    <img id="brandLogo" src="HelGo.png">
  </div>
 
  <div class="lang-switch" aria-label="Language switch">
@@ -42,7 +42,7 @@
     // Αλλάζουμε το λογότυπο με βάση τη γλώσσα
     const logo = document.getElementById('brandLogo');
     if (lang === 'el') {
-      logo.src = 'ΕΠΑΚ.png'; 
+      logo.src = 'EPAK.png'; 
       // πρόσθεσε εδώ άλλα βήματα (π.χ. αλλαγή γλωσσικού κειμένου)
     } else {
       logo.src = 'HelGo.png';
