--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <header>
  <div class="brand" aria-label="Branding">
-    <img id="brandLogo" src="HelGo.png">
+    <img id="brandLogo" src="HelGo.png" alt="Brand logo">
  </div>
 
  <div class="lang-switch" aria-label="Language switch">
