--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <header>
  <div class="brand" aria-label="Branding">
-    <img id="brandLogo" src="HelGo.png" alt="Brand logo">
+    <img id="brandLogo" src="Logo.png" alt="Brand logo">
  </div>
 
  <div class="lang-switch" aria-label="Language switch">
@@ -81,7 +81,7 @@
           <p>Ένας χώρος έρευνας για το ελληνικό κόσμημα που χαρτογραφεί το σύστημα πολιτισμού, οικονομίας και τεχνικής εκπαίδευσης στην αργυροχρυσοχοΐα,σε διάλογο με τις διεθνείς και εγχώριες τάσεις.</p>
           <a class="cta" href="#about-el" onclick="openTab('about-el')">Μάθετε περισσότερα →</a>
         </div>
-        <img src="assets/jewelry1.jpg" alt="Κοσμήματα σε εργαστήριο" />
+        <img src="EPAK.jpg" alt="Κοσμήματα σε εργαστήριο" />
       </div>
     </section>
 
@@ -129,7 +129,7 @@
           <p>A research space dedicated to Greek jewelry that maps the interconnected system of culture, the economy, and technical education in silversmithing and goldsmithing, in dialogue with international and local trends.</p>
           <a class="cta" href="#about-en" onclick="openTab('about-en')">Learn more →</a>
         </div>
-        <img src="assets/jewelry1.jpg" alt="Jewelry in studio" />
+        <img src="HelGO.jpg" alt="Jewelry in studio" />
       </div>
     </section>
 
