--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <p>A research space dedicated to Greek jewelry that maps the interconnected system of culture, the economy, and technical education in silversmithing and goldsmithing, in dialogue with international and local trends.</p>
           <a class="cta" href="#about-en" onclick="openTab('about-en')">Learn more →</a>
         </div>
-        <img src="HelGO.jpg" alt="Jewelry in studio" />
+        <img src="photo ergastirio 3.png" alt="Jewelry in studio" />
       </div>
     </section>
 
