--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div>
           <h1>ΕΛΛΗΝΙΚΟ ΠΑΡΑΤΗΡΗΤΗΡΙΟ ΑΡΓΥΡΟΧΡΥΣΟΧΟΪΑΣ ΚΑΙ ΚΟΣΜΗΜΑΤΟΠΟΙΙΑΣ</h1>
           <p>Ένας χώρος έρευνας για το ελληνικό κόσμημα που χαρτογραφεί το σύστημα πολιτισμού, οικονομίας και τεχνικής εκπαίδευσης στην αργυροχρυσοχοΐα,σε διάλογο με τις διεθνείς και εγχώριες τάσεις.</p>
-          <a class="cta" href="#about-el" onclick="openTab('about-el')">Μάθετε περισσότερα →</a>
+          <a class="cta" href="#about-el" onclick="openTab('about-el')"
         </div>
         <img src="photo ergastirio 3.png" alt="Κοσμήματα σε εργαστήριο" />
       </div>
@@ -143,7 +143,7 @@
         <div>
           <h1>HELLENIC GOLDSMITHING OBSERVATORY</h1>
           <p>A research space dedicated to Greek jewelry that maps the interconnected system of culture, the economy, and technical education in silversmithing and goldsmithing, in dialogue with international and local trends.</p>
-          <a class="cta" href="#about-en" onclick="openTab('about-en')">Learn more →</a>
+          <a class="cta" href="#about-en" onclick="openTab('about-en')"
         </div>
         <img src="photo ergastirio 3.png" alt="Jewelry in studio" />
       </div>
