--- a/index.html
+++ b/index.html
@@ -4,54 +4,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
-  --header-bg: #ffffff;
-  --text: #111;
-  --border: #eee;
-  --link: #111;
-}
+      --header-bg: #ffffff;
+      --text: #111;
+      --border: #eee;
+      --link: #111;
+    }
 
-* { box-sizing: border-box; }
-html, body { margin: 0; }
+    * { box-sizing: border-box; }
+    html, body { margin: 0; }
 
-body {
-  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-  color: var(--text);
-  background: #fff;
-}
+    body {
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+      color: var(--text);
+      background: #fff;
+    }
 
-/* Canonical header */
-.site-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1.75rem 1.25rem;
-  border-bottom: 1px solid var(--border);
-  min-height: 88px;
-  background: var(--header-bg);
-}
+    /* Canonical header (stable, centered layout option) */
+    .site-header {
+      display: flex;
+      align-items: center;
+      justify-content: center;       /* center header children horizontally */
+      padding: 1.75rem 1.25rem;
+      border-bottom: 1px solid var(--border);
+      min-height: 88px;
+      background: var(--header-bg);
+      text-align: center;
+    }
 
-.site-header__brand { display: flex; align-items: center; gap: 1rem; }
-.site-header__logo { height: 64px; width: auto; }
+    .site-header > .site-header__inner {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      width: min(1200px, 100%);
+      justify-content: center;
+    }
 
-.site-header__nav { display: flex; gap: 1rem; }
-.site-header__nav-link {
-  background: transparent;
-  border: 0;
-  font-weight: 700;
-  padding: .25rem .5rem;
-  cursor: pointer;
-  color: var(--text);
-}
-.site-header__lang { display: flex; gap: .5rem; }
-.site-header__lang-btn {
-  padding: .6rem .9rem;
-  border: 1px solid #333;
-  background: #fff;
-  border-radius: 6px;
-  font-weight: 700;
-  color: var(--text);
-  cursor: pointer;
-}
+    .site-header__brand { display: flex; align-items: center; gap: 1rem; }
+    .site-header__logo { height: 64px; width: auto; }
+
+    .site-header__nav { display: flex; gap: 1rem; }
+    .site-header__nav-link {
+      background: transparent;
+      border: 0;
+      font-weight: 700;
+      padding: .25rem .5rem;
+      cursor: pointer;
+      color: var(--text);
+    }
+
+    .site-header__lang { display: flex; gap: .5rem; }
+    .site-header__lang-btn {
+      padding: .6rem .9rem;
+      border: 1px solid #333;
+      background: #fff;
+      border-radius: 6px;
+      font-weight: 700;
+      color: var(--text);
+      cursor: pointer;
+    }
+
+    /* Centered main content container */
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 1rem;
+      text-align: center; /* center text by default inside blocks */
+    }
+
+    /* Optional: center images and large blocks */
+    main { padding: 1rem; }
+
+    /* Small screens: stack header elements nicely without breaking centering */
+    @media (max-width: 800px) {
+      .site-header { padding: 1rem; }
+      .site-header__nav { display: none; } /* optional: hide on small screens */
+    }    
   </style>
 </head>
 <body>
