--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!doctype html>
 <html lang="el">
-<meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root {
-      --header-bg: #ffffff;
-      --text: #111;
-      --border: #eee;
-      --link: #111;
-    }
+    :root { --header-bg:#fff; --text:#111; --border:#eee; }
 
     * { box-sizing: border-box; }
     html, body { margin: 0; }
 
-    body {
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-      color: var(--text);
-      background: #fff;
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; color: var(--text); background:#fff; }
+
+    .center-all {
+      text-align: center;
+      max-width: 1200px;
+      margin: 0 auto;
     }
 
-    /* Canonical header (stable, centered layout option) */
     .site-header {
       display: flex;
       align-items: center;
-      justify-content: center;       /* center header children horizontally */
+      justify-content: center;
       padding: 1.75rem 1.25rem;
       border-bottom: 1px solid var(--border);
       min-height: 88px;
@@ -32,104 +29,57 @@
     }
 
     .site-header > .site-header__inner {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
+      display: flex; align-items: center; gap: 1rem;
       width: min(1200px, 100%);
       justify-content: center;
     }
 
-    .site-header__brand { display: flex; align-items: center; gap: 1rem; }
+    .site-header__brand { display:flex; align-items:center; gap:1rem; }
     .site-header__logo { height: 24px; width: auto; max-width: 90px; }
 
-    .site-header__nav { display: flex; gap: 1rem; }
-    .site-header__nav-link {
-      background: transparent;
-      border: 0;
-      font-weight: 700;
-      padding: .25rem .5rem;
-      cursor: pointer;
-      color: var(--text);
-    }
+    .site-header__nav { display:flex; gap:1rem; }
+    .site-header__nav-link { background:transparent; border:0; font-weight:700; padding:.25rem .5rem; cursor:pointer; color:var(--text); }
 
-    .site-header__lang { display: flex; gap: .5rem; }
-    .site-header__lang-btn {
-      padding: .6rem .9rem;
-      border: 1px solid #333;
-      background: #fff;
-      border-radius: 6px;
-      font-weight: 700;
-      color: var(--text);
-      cursor: pointer;
-    }
+    .site-header__lang { display:flex; gap:.5rem; }
+    .site-header__lang-btn { padding:.6rem .9rem; border:1px solid #333; background:#fff; border-radius:6px; font-weight:700; color: var(--text); cursor:pointer; }
 
-    /* Centered main content container */
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 1rem;
-      text-align: center; /* center text by default inside blocks */
-    }
+    .container { max-width: 800px; margin: 0 auto; padding: 1rem; text-align: center; }
 
-    /* Optional: center images and large blocks */
     main { padding: 1rem; }
 
-    /* Small screens: stack header elements nicely without breaking centering */
     @media (max-width: 800px) {
       .site-header { padding: 1rem; }
-      .site-header__nav { display: none; } /* optional: hide on small screens */
-    }    
+      .site-header__nav { display: none; }
+    }
   </style>
 </head>
 <body>
 
-<header>
- <div class="brand" aria-label="Branding">
-    <img id="brandLogo" src="Logo.png" alt="Brand logo">
- </div>
-
- <div class="lang-switch" aria-label="Language switch">
-    <button onclick="setLang('el')">GR</button>
-    <button onclick="setLang('en')">EN</button>
- </div>
-</header>
-
-<script>
-  function setLang(lang) {
-    // Αλλάζουμε το λογότυπο με βάση τη γλώσσα
-    const logo = document.getElementById('brandLogo');
-    if (lang === 'el') {
-      logo.src = 'EPAK.png'; 
-      // πρόσθεσε εδώ άλλα βήματα (π.χ. αλλαγή γλωσσικού κειμένου)
-    } else {
-      logo.src = 'HelGo.png';
-    }
-    // αποθηκεύουμε τη γλώσσα (π.χ. localStorage) αν το χρειάζεσαι
-    localStorage.setItem('siteLang', lang);
-  }
-
-  // Μη αυτόματη φόρτωση γλώσσας από το παρελθόν
-  (function initLang() {
-    const saved = localStorage.getItem('siteLang') || 'en';
-    setLang(saved);
-  })();
-</script>
+<div class="center-all">
+  <header class="site-header" aria-label="Site header">
+    <div class="brand" aria-label="Branding">
+      <img id="brandLogo" src="Logo.png" alt="Brand logo">
+    </div>
+    <div class="lang-switch" aria-label="Language switch">
+      <button onclick="setLang('el')">GR</button>
+      <button onclick="setLang('en')">EN</button>
+    </div>
+  </header>
 
   <nav class="main-nav" aria-label="Main navigation" id="main-nav">
-    <!-- Ελληνικά (από προεπιλογή φαίνονται) -->
     <button data-target="home-el" onclick="openTab('home-el')">Αρχική</button>
     <button data-target="about-el" onclick="openTab('about-el')">Σχετικά</button>
     <button data-target="research-el" onclick="openTab('research-el')" style="display:none;">Έρευνα</button>
     <button data-target="contact-el" onclick="openTab('contact-el')" style="display:none;">Επικοινωνία</button>
 
-    <!-- Αγγλικά (κρυμμένα έως ότου επιλεγεί EN) -->
     <button data-target="home-en" onclick="openTab('home-en')" style="display:none;">Home</button>
     <button data-target="about-en" onclick="openTab('about-en')" style="display:none;">About</button>
     <button data-target="research-en" onclick="openTab('research-en')" style="display:none;">Research</button>
     <button data-target="contact-en" onclick="openTab('contact-en')" style="display:none;">Contact</button>
   </nav>
 
-  <main id="content">
+
+  <main id="content" class="container">
     <!-- Home el (Default) -->
     <section id="home-el" class="tab active" aria-label="Αρχική Ελληνικά">
       <div class="hero">
