--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .site-header__brand { display:flex; align-items:center; gap:1rem; }
-    .site-header__logo { height: 24px; width: auto; max-width: 90px; }
+    .site-header__logo { height: 16px; width: auto; }
 
     .site-header__nav { display:flex; gap:1rem; }
     .site-header__nav-link { background:transparent; border:0; font-weight:700; padding:.25rem .5rem; cursor:pointer; color:var(--text); }
