--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="el">
-<head>
+<head>  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
@@ -58,7 +58,7 @@
 <div class="center-all">
   <header class="site-header" aria-label="Site header">
     <div class="brand" aria-label="Branding">
-      <img id="brandLogo" src="Logo.png" alt="Brand logo">
+      <img id="brandLogo" src="Logo.png" alt="Brand logo" style="height: 12px; width: auto;">
     </div>
     <div class="lang-switch" aria-label="Language switch">
       <button onclick="setLang('el')">GR</button>
