--- a/index.html
+++ b/index.html
@@ -125,6 +125,48 @@
            <p>Είναι πτυχιούχος Οικονομικής Επιστήμης από το Οικονομικό Πανεπιστήμιο Αθηνών και κάτοχος δύο μεταπτυχιακών τίτλων στην Εφαρμοσμένη Οικονομική και Χρηματοοικονομική και στην Οικονομική Θεωρία (ΟΠΑ). Σήμερα είναι Υποψήφια Διδάκτορας στο Τμήμα Οικονομικής Επιστήμης του ΟΠΑ, όπου το ερευνητικό της έργο εστιάζει στη μακροχρόνια σχέση του δημοσίου χρέους επιλεγμένων χωρών με μακροοικονομικές μεταβλητές που επηρεάζουν τη δυναμική του. Έχει εργαστεί ως junior ερευνήτρια στο ΕΛΙΑΜΕΠ (2014–2015), ως διοικητική υπάλληλος στην εταιρεία APOLLO (2015–2017) και ως ερευνήτρια στην Τράπεζα της Ελλάδος (2019–2020). Κατά τη διάρκεια των διδακτορικών της σπουδών έχει διδάξει προπτυχιακά και μεταπτυχιακά μαθήματα, εμπειρία που συνέβαλε καθοριστικά στην ικανότητά της να δομεί και να παρουσιάζει με σαφήνεια σύνθετα θεωρητικά και τεχνικά ζητήματα, καθώς και να αναδεικνύει τις συνδέσεις τους με τις δημιουργικές πρακτικές, την αγορά και τη διαδικασία παραγωγής αξίας. Παράλληλα με την ακαδημαϊκή της πορεία, μεγάλωσε στο Ναύπλιο, σε ένα περιβάλλον άμεσα συνδεδεμένο με το κόσμημα. Από νεαρή ηλικία απέκτησε ουσιαστική εμπειρία μέσα από την πολυετή λειτουργία οικογενειακού καταστήματος κοσμημάτων σε μία από τις πιο έντονες τουριστικά αγορές της Ελλάδας. Η καθημερινή της τριβή με την πώληση, την προώθηση και την επαφή με ένα ευρύ ελληνικό και διεθνές αγοραστικό κοινό της προσέφερε βαθιά γνώση των τάσεων και της εμπορικής δυναμικής του κοσμήματος, καθώς και μια σφαιρική ματιά στη γέφυρα συνεργασίας μεταξύ κοσμηματοτεχνίτη και πωλητή — από τον σχεδιασμό και την παραγωγή έως την παρουσίαση, την αφήγηση και την τελική επιλογή του κοσμήματος από τον αγοραστή.</p>
            </div>
      </div>
+
+    <!-- Studies / Μελέτες (placeholder) -->
+    <section id="studies" class="tab" aria-label="Έρευνα" style="display:none;">
+      <div class="studies-grid" style="display:grid; grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); gap:1rem; padding:1rem 0;">
+        <!-- Greek / Ελληνικά -->
+        <div class="study-card" style="border:1px solid #e5e5e5; padding:1rem; border-radius:8px;">
+          <h3 style="margin:0 0 0.5rem 0;">Μελέτες</h3>
+          <strong>Ελληνικά</strong>
+          <ul style="margin:0; padding-left:1.2rem;">
+            <li>
+              <a href="#" target="_blank" rel="noopener">Τίτλος μελέτης 1</a>
+              <p style="margin:0.25rem 0 0; color:#555; font-size:0.95em;">Μικρή περιγραφή της μελέτης 1.</p>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noopener">Τίτλος μελέτης 2</a>
+              <p style="margin:0.25rem 0 0; color:#555; font-size:0.95em;">Μικρή περιγραφή της μελέτης 2.</p>
+            </li>
+          </ul>
+        </div> 
+
+    <!-- English / Αγγλικά -->
+      <div class="study-card" style="border:1px solid #e5e5e5; padding:1rem; border-radius:8px;">
+        <h3 style="margin:0 0 0.5rem 0;">Studies / Μελέτες</h3>
+        <strong>English</strong>
+        <ul style="margin:0; padding-left:1.2rem;">
+          <li>
+            <a href="#" target="_blank" rel="noopener">Study title 1</a>
+            <p style="margin:0.25rem 0 0; color:#555; font-size:0.95em;">Short description of study 1.</p>
+          </li>
+          <li>
+            <a href="#" target="_blank" rel="noopener">Study title 2</a>
+            <p style="margin:0.25rem 0 0; color:#555; font-size:0.95em;">Short description of study 2.</p>
+           </li>
+         </ul>
+       </div>
+     </div>
+
+
+
+
+
+
       
     </section> 
     
