--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     .site-header {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       padding: 1.75rem 1.25rem;
       border-bottom: 1px solid var(--border);
       min-height: 88px;
       background: var(--header-bg);
-      text-align: center;
+      text-align: left;
     }
 
     .site-header > .site-header__inner {
