--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .site-header {
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: flex-start; /* changed from center */;
       padding: 1.75rem 1.25rem;
       border-bottom: 1px solid var(--border);
       min-height: 88px;
@@ -40,8 +40,8 @@
     .site-header__nav { display:flex; gap:1rem; }
     .site-header__nav-link { background:transparent; border:0; font-weight:700; padding:.25rem .5rem; cursor:pointer; color:var(--text); }
 
-    .site-header__lang { display:flex; gap:.5rem; }
-    .site-header__lang-btn { padding:.6rem .9rem; border:1px solid #333; background:#fff; border-radius:6px; font-weight:700; color: var(--text); cursor:pointer; }
+    .site-header__lang { margin-left: auto; display:flex; gap:.5rem; }
+    .site-header__lang button { padding:.6rem .9rem; border:1px solid #0aa78c; background:#fff; border-radius:6px; font-weight:700; color: var(--text); cursor:pointer; }
 
     .container { max-width: 800px; margin: 0 auto; padding: 1rem; text-align: center; }
 
@@ -53,6 +53,10 @@
     }
   </style>
 </head>
+
+
+
+  
 <body>
 
 <div class="center-all">
