--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <a href="#" class="site-header__nav-link">Αρχική</a>
     <a href="#" class="site-header__nav-link">Σχετικά</a>
     <a href="#" class="site-header__nav-link">Έρευνα</a>
+    <a href="#" class="site-header__nav-link">Δράσεις</a>
     <a href="#" class="site-header__nav-link">Επικοινωνία</a>
   </nav>
 
@@ -98,13 +99,12 @@
 
 
 
-  
 <body>
 
 <div class="center-all">
   <header class="site-header" aria-label="Site header">
     <div class="brand" aria-label="Branding">
-      <img id="brandLogo" src="EPAK.png" alt="Brand logo" style="height: 100px; width: auto;">
+      <img id="brandLogo" src="EPAK.png" alt="Brand logo" style="height: 80px; width: auto;">
     </div>
     <div class="lang-switch" aria-label="Language switch">
       <button onclick="setLang('el')">GR</button>
@@ -116,11 +116,13 @@
     <button data-target="home-el" onclick="openTab('home-el')">Αρχική</button>
     <button data-target="about-el" onclick="openTab('about-el')">Σχετικά</button>
     <button data-target="research-el" onclick="openTab('research-el')" style="display:none;">Έρευνα</button>
+    <button data-target="research-el" onclick="openTab('research-el')" style="display:none;">Δράσεις</button>
     <button data-target="contact-el" onclick="openTab('contact-el')" style="display:none;">Επικοινωνία</button>
 
     <button data-target="home-en" onclick="openTab('home-en')" style="display:none;">Home</button>
     <button data-target="about-en" onclick="openTab('about-en')" style="display:none;">About</button>
     <button data-target="research-en" onclick="openTab('research-en')" style="display:none;">Research</button>
+    <button data-target="research-en" onclick="openTab('research-en')" style="display:none;">Activities</button>
     <button data-target="contact-en" onclick="openTab('contact-en')" style="display:none;">Contact</button>
   </nav>
 
